# voice-to-text

./: .bandit  .bumpversion.cfg  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  GOVERNANCE.md  LICENSE  MODERNIZATION_PLAN.md  Makefile  README.md  SECURITY.md  SUPPORT.md  cli.py  compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  server.py  setup.sh  transcribe.py
.claude/: CLAUDE.md  settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/scripts/: setup-first-release.sh
.github/workflows/: ci.yml  release.yml  setup-labels.yml
app/: __init__.py  main.py
app/api/: __init__.py  docs.py  routes.py  services.py
app/cli/: __init__.py  main.py
app/core/: __init__.py  config.py  errors.py  logger.py  middleware.py  response.py
app/schemas/: __init__.py  base.py  transcription.py  validation.py
app/services/: __init__.py  diarization.py  pipeline.py  transcriber.py
app/utils/: __init__.py  io_utils.py
app/whisper/: __init__.py  openai_whisper.py  transformers_whisper.py
docs/: ARCHITECTURE.md  PROJECT_STRUCTURE.md
media/transcripts/: merge_20260213_070626.txt
transcripts/: merge_20260213_070626.txt  mix_20260213_043502.txt  mix_20260213_044625.txt  multi_person_20260211_092737.txt  multi_person_20260211_093334.txt  multi_person_20260211_093647.txt  multi_person_20260211_095135.txt  multi_person_20260211_110918.txt  multi_person_20260211_123218.txt  multi_person_20260213_041351.txt  single_person_20260211_092252.txt  single_person_20260213_041946.txt  temp_ScreenRecording_09-10-2568 14-45-55_1 (online-audio-converter.com)_20260212_034845.txt
voice_to_text/: __init__.py  cli.py  config.py  diarization.py  io_utils.py  pipeline.py
voice_to_text/api/: __init__.py  routes.py
voice_to_text/backends/: __init__.py  openai_whisper.py
