[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-to-text"
description = "AI-powered voice transcription service using Whisper"
readme = "README.md"
requires-python = ">=3.14"
dynamic = ["version"]
authors = [
    {name = "Shahadath Hossen Sajib", email = "shahadathhossensajib732@gmail.com"}
]
maintainers = [
    {name = "Shahadath Hossen Sajib", email = "shahadathhossensajib732@gmail.com"}
]

dependencies = [
    # Core Transcription
    "openai-whisper",
    "setuptools-rust",

    # Hugging Face Transformers
    "transformers>=4.40.0",
    "accelerate",

    # API Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.26",

    # Data Handling & System
    "numpy<3.0",
    "pandas",

    # Audio Processing
    "pydub",
    "speechbrain",
    "huggingface-hub<1.13.0",
    "scikit-learn",

    # Configuration & Logging
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7.0",
]

[tool.hatch.version]
path = "app/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["app", "voice_to_text"]

[project.scripts]
voice-to-text = "app.cli.main:main"
vtt = "app.cli.main:main"  # Short alias

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "build>=1.4.3",
    "bandit>=1.9.4",
    "python-semantic-release>=10.5.3",
    "ruff==0.15.12",
    "black==26.3.1",
    "mypy==1.20.2",
    "types-requests",
]

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
# Enable comprehensive rule sets
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RUF",   # Ruff-specific rules
]

ignore = [
    "E501",  # Line too long (handled by black)
    "B008",  # Do not perform function calls in argument defaults
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black
line-length = 88

# Target Python 3.14
target-version = "py314"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]  # Allow lazy imports in __init__
"transcribe.py" = ["E402"]  # Allow lazy imports
"server.py" = ["E402"]  # Allow lazy imports

[tool.ruff.lint.isort]
known-first-party = ["voice_to_text"]

# =============================================================================
# Black Configuration
# =============================================================================
[tool.black]
line-length = 88
target-version = ['py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# =============================================================================
# MyPy Configuration
# =============================================================================
[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable this
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "whisper.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "speechbrain.*"
ignore_missing_imports = true

# =============================================================================
# Bandit Configuration
# =============================================================================
[tool.bandit]
exclude_dirs = ["/tests", "/venv", "/.venv"]
skips = ["B101"]  # Skip assert_used

# =============================================================================
# Semantic Release Configuration
# =============================================================================
[tool.semantic_release]
version_source = "tag"
version_variables = [
    "app/__init__.py:__version__",
    "voice_to_text/__init__.py:__version__",
]
branch = "main"
changelog_file = "CHANGELOG.md"
tag_format = "v{version}"
build_command = "uv run python -m build"
upload_to_pypi = false
remove_dist = false
commit_author = "github-actions <actions@github.com>"
commit_parser = "conventional"

# =============================================================================
# PyTest Configuration (for future testing)
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
